@@ -33,17 +33,29 @@ Entscheidungen:
 **Kompilieren:**
 
 ```powershell
-mvn -q -DskipTests compile
+mvn -q -DskipTests javafx:run
 ```
 
 **Ausführen:**
 
 ```powershell
-mvn -q exec:java '-Dexec.mainClass=com.gvi.project.Main'
+mvn -q javafx:run
 ```
 
 **Build und Run zusammen:**
 
 ```powershell
-mvn -q clean compile exec:java '-Dexec.mainClass=com.gvi.project.Main'
+mvn -q -DskipTests clean javafx:run
+```
+
+**Alternative Kompilier/Ausführ variante**
+
+In IntelliJ, rechts in der Seitenleiste m -> gviProject -> plugins -> javafx -> javafx:run, ausführen mit doppelclick.
+Alternativ JavaFx 21.0.2 <a href="https://gluonhq.com/products/javafx/" target="_blank">downloaden</a> (ihr müsst archivierte Versionen 
+anzeigen lassen um die zu finden) und in entpacken an einer von euch gewünschten stelle.
+<img width="1224" height="667" alt="image" src="https://github.com/user-attachments/assets/87ce7d17-4782-4eac-9747-79be57b1873e" />
+Anschließend ein Run conifig anlegen, über modify options -> add VM options, die VM options anzeigen lassen und folgende Argumente eintragen
+
+```powershell
+--module-path "%%hier deinen pfad zur javaFx sdk eintragen%%\javafx-sdk-21.0.2\lib" --add-modules javafx.controls,javafx.fxml 
 ```
